--- a/vc2013/SanctumVR.vcxproj.filters
+++ b/vc2013/SanctumVR.vcxproj.filters
@@ -41,4 +41,12 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\assets\shader.frag">
+      <Filter>Header Files</Filter>
+    </None>
+    <None Include="..\assets\shader.vert">
+      <Filter>Header Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
